--- a/AtlasSNS/public/css/style.css
+++ b/AtlasSNS/public/css/style.css
@@ -1,22 +1,91 @@
 @charset "utf-8";
-html{
-}
-body{
-}
+
+html {}
+
+body {}
+
 /* header */
-header{
-    background:#186AC9;
+header {
+    background: #186AC9;
 }
 
 /* main content */
-#row{
+#row {
     display: flex;
     flex-flow: row wrap;
 }
-#container{
+
+#container {
     flex: 0 0 80%;
 }
-#side-bar{
+
+#side-bar {
     flex: 0 0 19%;
     border-left: 1px solid #727272;
+}
+
+/* アコーディオン　*/
+.menu-btn {
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    top: 1px;
+    right: 1px;
+    background-color: #fff;
+}
+
+.inner {
+    position: absolute;
+    top: 1px;
+    right: 1px;
+}
+
+&:before {
+    position: absolute;
+    content: "";
+    top: 40%;
+    left: 50%;
+    width: 15px;
+    height: 15px;
+    transform: translate(-50%, -40%) rotate(135deg);
+    border-top: 1px solid #000;
+    border-right: 1px solid #000;
+    transition: 0.3s ease;
+}
+
+.menu-btn.is-open {
+    .inn {
+        &:before {
+            top: 60%;
+            transform: translate(-50%, -60%) rotate(-45deg);
+        }
+    }
+}
+
+.menu {
+    position: absolute;
+    top: 60px;
+    width: 100%;
+    background-color: #fff;
+    opacity: 0;
+    transition: .3s ease-in-out;
+    pointer-events: none;
+    transform: translateY(-30px);
+
+    ul {
+        border-bottom: 1px solid #000;
+
+        li {
+            height: 60px;
+            border-top: 1px solid #000;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    }
+}
+
+.menu.is-open {
+    opacity: 1;
+    transform: translateY(0);
 }
