--- a/AtlasSNS/public/css/style.css
+++ b/AtlasSNS/public/css/style.css
@@ -7,6 +7,8 @@ body {}
 /* header */
 header {
     background: #186AC9;
+    width: 100%;
+    height: 100px;
 }
 
 /* main content */
@@ -24,7 +26,22 @@ header {
     border-left: 1px solid #727272;
 }
 
+h1 {
+    padding: 30px;
+}
+
+#head {
+    display: flex;
+}
+
+.icon {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
 /* アコーディオン　*/
+
 .menu-btn {
     width: 60px;
     height: 60px;
@@ -32,32 +49,37 @@ header {
     top: 1px;
     right: 1px;
     background-color: #fff;
-}
+    outline: initial;
 
-.inner {
-    position: absolute;
-    top: 1px;
-    right: 1px;
-}
+    &:focus-visible {
+        box-shadow: 0 0 0 2px blue;
+    }
 
-&:before {
-    position: absolute;
-    content: "";
-    top: 40%;
-    left: 50%;
-    width: 15px;
-    height: 15px;
-    transform: translate(-50%, -40%) rotate(135deg);
-    border-top: 1px solid #000;
-    border-right: 1px solid #000;
-    transition: 0.3s ease;
-}
-
-.menu-btn.is-open {
     .inn {
-        &:before {
-            top: 60%;
-            transform: translate(-50%, -60%) rotate(-45deg);
+        position: absolute;
+        top: 1px;
+        right: 1px;
+    }
+
+    &:before {
+        position: absolute;
+        content: "";
+        top: 10%;
+        right: 10%;
+        width: 15px;
+        height: 15px;
+        transform: translate(-50%, -40%) rotate(135deg);
+        border-top: 2px solid #fff;
+        border-right: 2px solid #fff;
+        transition: 0.3s ease;
+    }
+
+    .menu-btn.is-open {
+        .inn {
+            &:before {
+                top: 60%;
+                transform: translate(-50%, -60%) rotate(-45deg);
+            }
         }
     }
 }
