--- a/AtlasSNS/public/css/style.css
+++ b/AtlasSNS/public/css/style.css
@@ -9,6 +9,8 @@ header {
     background: #186AC9;
     width: 100%;
     height: 100px;
+    display: flex;
+    justify-content: space-between;
 }
 
 /* main content */
@@ -30,26 +32,27 @@ h1 {
     padding: 30px;
 }
 
-#head {
-    display: flex;
-}
-
 .icon {
     position: absolute;
     top: 20px;
     right: 20px;
 }
 
+.header-right {
+    display: flex;
+}
+
 /* アコーディオン　*/
 
 .menu-btn {
-    width: 60px;
-    height: 60px;
+    width: 30px;
+    height: 30px;
     position: absolute;
     top: 1px;
     right: 1px;
-    background-color: #fff;
+    background-color: #186AC9;
     outline: initial;
+    z-index: 1;
 
     &:focus-visible {
         box-shadow: 0 0 0 2px blue;
@@ -79,10 +82,12 @@ h1 {
             &:before {
                 top: 60%;
                 transform: translate(-50%, -60%) rotate(-45deg);
+                width: 19%;
             }
         }
     }
 }
+
 
 .menu {
     position: absolute;
@@ -110,4 +115,5 @@ h1 {
 .menu.is-open {
     opacity: 1;
     transform: translateY(0);
+    pointer-events: initial;
 }
