--- a/AtlasSNS/public/css/style.css
+++ b/AtlasSNS/public/css/style.css
@@ -11,6 +11,7 @@ header {
     height: 100px;
     display: flex;
     justify-content: space-between;
+    position: relative;
 }
 
 /* main content */
@@ -33,7 +34,7 @@ h1 {
 }
 
 .icon {
-    position: absolute;
+    position: relative;
     top: 20px;
     right: 20px;
 }
@@ -42,17 +43,21 @@ h1 {
     display: flex;
 }
 
+.header-right p {
+    padding: 40px 0px;
+}
+
+
 /* アコーディオン　*/
 
 .menu-btn {
-    width: 30px;
-    height: 30px;
+    width: 35px;
+    height: 35px;
     position: absolute;
-    top: 1px;
-    right: 1px;
+    top: 30px;
+    right: 110px;
     background-color: #186AC9;
-    outline: initial;
-    z-index: 1;
+    color: #186AC9;
 
     &:focus-visible {
         box-shadow: 0 0 0 2px blue;
@@ -60,15 +65,15 @@ h1 {
 
     .inn {
         position: absolute;
-        top: 1px;
-        right: 1px;
+        top: 10px;
+        right: 10px;
     }
 
     &:before {
         position: absolute;
         content: "";
-        top: 10%;
-        right: 10%;
+        top: 25%;
+        right: 0px;
         width: 15px;
         height: 15px;
         transform: translate(-50%, -40%) rotate(135deg);
@@ -90,7 +95,7 @@ h1 {
 
 
 .menu {
-    position: absolute;
+    position: relative;
     top: 60px;
     width: 100%;
     background-color: #fff;
