--- a/AtlasSNS/public/css/style.css
+++ b/AtlasSNS/public/css/style.css
@@ -48,8 +48,7 @@ h1 {
 }
 
 
-/* アコーディオン　*/
-
+/*アコーディオン */
 .menu-btn {
     width: 35px;
     height: 35px;
@@ -57,11 +56,7 @@ h1 {
     top: 30px;
     right: 110px;
     background-color: #186AC9;
-    color: #186AC9;
 
-    &:focus-visible {
-        box-shadow: 0 0 0 2px blue;
-    }
 
     .inn {
         position: absolute;
@@ -103,17 +98,23 @@ h1 {
     transition: .3s ease-in-out;
     pointer-events: none;
     transform: translateY(-30px);
+    border: solid 2px navy;
 
-    ul {
-        border-bottom: 1px solid #000;
+    li {
+        height: 60px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-bottom: solid 2px navy;
+    }
 
-        li {
-            height: 60px;
-            border-top: 1px solid #000;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
+    li:last-child {
+        border-bottom: 0;
+    }
+
+    li:hover {
+        background-color: navy;
+        color: #fff;
     }
 }
 
@@ -121,4 +122,8 @@ h1 {
     opacity: 1;
     transform: translateY(0);
     pointer-events: initial;
+    position: absolute;
+    top: 100px;
+    right: 0;
+    width: 298px;
 }
