--- a/AtlasSNS/public/css/style.css
+++ b/AtlasSNS/public/css/style.css
@@ -17,16 +17,13 @@ header {
 /* main content */
 #row {
     display: flex;
-    flex-flow: row wrap;
-}
-
-#container {
-    flex: 0 0 80%;
+    flex-flow: nowrap;
+    justify-content: space-between;
 }
 
 #side-bar {
-    flex: 0 0 19%;
     border-left: 1px solid #727272;
+    width: 325px;
 }
 
 h1 {
@@ -56,43 +53,35 @@ h1 {
     top: 30px;
     right: 110px;
     background-color: #186AC9;
-
-
-    .inn {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-    }
-
-    &:before {
-        position: absolute;
-        content: "";
-        top: 25%;
-        right: 0px;
-        width: 15px;
-        height: 15px;
-        transform: translate(-50%, -40%) rotate(135deg);
-        border-top: 2px solid #fff;
-        border-right: 2px solid #fff;
-        transition: 0.3s ease;
-    }
-
-    .menu-btn.is-open {
-        .inn {
-            &:before {
-                top: 60%;
-                transform: translate(-50%, -60%) rotate(-45deg);
-                width: 19%;
-            }
-        }
-    }
+    border: none;
 }
 
 
+.menu-btn::before {
+    position: absolute;
+    content: "";
+    top: 25%;
+    right: 0px;
+    width: 15px;
+    height: 15px;
+    transform: translate(-50%, -40%) rotate(135deg);
+    border-top: 2px solid #fff;
+    border-right: 2px solid #fff;
+    transition: 0.3s ease;
+}
+
+.menu-btn.is-open::before {
+    top: 60%;
+    transform: translate(-50%, -60%) rotate(-45deg);
+}
+
+
+
 .menu {
-    position: relative;
+    position: absolute;
     top: 60px;
-    width: 100%;
+    right: 0;
+    width: 300px;
     background-color: #fff;
     opacity: 0;
     transition: .3s ease-in-out;
@@ -114,6 +103,9 @@ h1 {
 
     li:hover {
         background-color: navy;
+    }
+
+    li:hover a {
         color: #fff;
     }
 }
@@ -122,8 +114,45 @@ h1 {
     opacity: 1;
     transform: translateY(0);
     pointer-events: initial;
-    position: absolute;
     top: 100px;
-    right: 0;
-    width: 298px;
+
+}
+
+.accordion {
+    width: 120px;
+}
+
+/*投稿エリア*/
+
+.form-area {
+    width: 80%;
+    margin-top: 50px;
+    padding-left: 70px;
+
+}
+
+.post-btn {
+    border-radius: 3px;
+}
+
+.post-icon {
+    position: relative;
+    bottom: 105px;
+}
+
+textarea {
+    border: none;
+
+    /* 右下の//（サイズ変更機能）を消す　*/
+    resize: none;
+
+    /* クリックした際の枠線が出てくるのを隠す　*/
+    outline: none;
+
+    width: 65%;
+
+}
+
+:-ms-input-placeholder::placeholder {
+    color: gray;
 }
