--- a/AtlasSNS/public/css/style.css
+++ b/AtlasSNS/public/css/style.css
@@ -4,6 +4,13 @@ html {}
 
 body {}
 
+#container {
+    width: 100%;
+}
+
+/* ログイン画面 */
+
+
 /* header */
 header {
     background: #186AC9;
@@ -12,6 +19,11 @@ header {
     display: flex;
     justify-content: space-between;
     position: relative;
+    text-align: center;
+}
+
+header a {
+    display: inline-block;
 }
 
 /* main content */
@@ -81,7 +93,7 @@ h1 {
     position: absolute;
     top: 60px;
     right: 0;
-    width: 300px;
+    width: 265px;
     background-color: #fff;
     opacity: 0;
     transition: .3s ease-in-out;
@@ -124,20 +136,36 @@ h1 {
 
 /*投稿エリア*/
 
-.form-area {
+textarea {
+    resize: none;
     width: 100%;
-    margin-top: 50px;
-    padding-left: 70px;
+    height: 100px;
+    font-family: inherit;
+    font-size: 100%;
+}
 
+.form-area {
+    padding-left: 120px;
+    margin-top: 50px;
+    padding-bottom: 5px;
+    border-bottom: solid 8px;
+    border-bottom-color: lightgray;
 }
 
 .post-btn {
     border-radius: 3px;
 }
 
+.form-flex {
+    display: flex;
+}
+
 .post-icon {
+    width: 50px;
+    height: 50px;
     position: relative;
-    bottom: 105px;
+    bottom: 17px;
+    right: 5px;
 }
 
 textarea {
@@ -148,11 +176,82 @@ textarea {
 
     /* クリックした際の枠線が出てくるのを隠す　*/
     outline: none;
-
-    width: 65%;
-
 }
 
 :-ms-input-placeholder::placeholder {
     color: gray;
+}
+
+/* モーダル */
+.content {
+    margin: 0 auto;
+    padding: 40px;
+}
+
+.modal {
+    display: none;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+.modal__bg {
+    background: rgba(0, 0, 0, 0.8);
+    height: 100vh;
+    position: absolute;
+    width: 100%;
+}
+
+.modal__content {
+    background: #fff;
+    left: 50%;
+    padding: 40px;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 60%;
+}
+
+.modal-submit {
+    display: block;
+    margin: 0 auto;
+}
+
+/* サイドバー */
+#side-bar {
+    padding-top: 25px;
+}
+
+.btn {
+    background-color: #186AC9;
+    padding: 15px 23px;
+    margin-bottom: 25px;
+    border-radius: 10px;
+    text-align: center;
+    display: inline-block;
+}
+
+.btn a {
+    color: #fff;
+}
+
+#confirm {
+    border-bottom: solid 1px #727272;
+    padding-left: 15px;
+}
+
+.side-flex {
+    display: flex;
+
+}
+
+.side-flex p {
+    margin-left: 40px;
+    margin: 25px 0;
+
+}
+
+.search-btn {
+    margin-top: 25px;
 }
