--- a/AtlasSNS/public/css/style.css
+++ b/AtlasSNS/public/css/style.css
@@ -138,7 +138,7 @@ h1 {
 
 textarea {
     resize: none;
-    width: 100%;
+    width: 800px;
     height: 100px;
     font-family: inherit;
     font-size: 100%;
@@ -147,13 +147,15 @@ textarea {
 .form-area {
     padding-left: 120px;
     margin-top: 50px;
-    padding-bottom: 5px;
+    padding-bottom: 25px;
     border-bottom: solid 8px;
     border-bottom-color: lightgray;
 }
 
 .post-btn {
     border-radius: 3px;
+    height: 40px;
+    margin-top: auto;
 }
 
 .form-flex {
@@ -229,7 +231,10 @@ textarea {
     margin-bottom: 25px;
     border-radius: 10px;
     text-align: center;
-    display: inline-block;
+    display: block;
+    margin-left: auto;
+    margin-right: 0;
+    width: 10em;
 }
 
 .btn a {
@@ -254,10 +259,19 @@ textarea {
 
 .search-btn {
     margin-top: 25px;
+    margin-left: auto;
+    margin-right: auto;
+
 }
 
 /* 検索 */
 .search-area {
     border-bottom: solid 8px;
     border-bottom-color: lightgray;
+}
+
+.search-area a img {
+    width: 46px;
+    height: 46px;
+    border-radius: 3px;
 }
