--- a/AtlasSNS/public/css/style.css
+++ b/AtlasSNS/public/css/style.css
@@ -1,4 +1,7 @@
 @charset "utf-8";
+body{
+    height: 100%;
+}
 
 #container {
     width: 100%;
@@ -27,7 +30,7 @@ header a {
     display: flex;
     flex-flow: nowrap;
     justify-content: space-between;
-    height: 100%;
+    height: 100vh;
 }
 
 #side-bar {
@@ -182,6 +185,17 @@ textarea {
     color: gray;
 }
 
+.post_content{
+    display: flex;
+    justify-content: space-between;
+}
+
+.edit_btn{
+    margin-left: 320px;
+    margin-right: 10px;
+    display: block;
+}
+
 /* モーダル */
 .content {
     margin: 0 auto;
@@ -247,15 +261,19 @@ textarea {
 
 .side-flex {
     display: flex;
-
+    justify-content: space-between;
+    padding-right: 50px;
 }
 
 .side-flex p {
-    margin-left: 40px;
-    margin: 25px 0;
-
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
 
+.side-flex p:last-child{
+    margin-left: 40px;
+}
+   
 .search-btn {
     margin-top: 25px;
     margin-left: auto;
