--- a/AtlasSNS/public/css/logout.css
+++ b/AtlasSNS/public/css/logout.css
@@ -28,23 +28,11 @@ header p {
     margin-top: 100px;
 }
 
-.inner {
-    z-index: 2;
+.background_container{
+    position: relative;
 }
 
-.inner p:first-child {
-    font-size: 120%;
-}
-
-.inner p:last-child {
-    margin-top: 20px;
-    text-decoration: underline;
-
-}
-
-form {
-
-    color: white;
+.background_color {
     display: inline-block;
     margin-bottom: 20px;
     background-color: gray;
@@ -53,6 +41,29 @@ form {
     padding: 35px;
     border-radius: 10px;
     z-index: 1;
+
+}
+
+.background_color p:first-child {
+    font-size: 120%;
+
+}
+
+.background_color p:last-child {
+    margin-top: 20px;
+    text-decoration: underline;
+
+}
+
+form{
+    color: white;
+    display: inline-block;
+    margin-bottom: 20px;
+    margin: 0 auto;
+    padding: 35px;
+    border-radius: 10px;
+    position: relative;
+    z-index: 2;
 }
 
 form a {
@@ -62,7 +73,7 @@ form a {
 
 .form {
     text-align: left;
-    padding: 10px;
+    padding: 15px;
 
 }
 
@@ -118,7 +129,7 @@ button{
     color: wheat;
     background-color: crimson;
     font-size: 110%;
-    
+
 }
 
 .add_top{
