--- a/AtlasSNS/public/css/logout.css
+++ b/AtlasSNS/public/css/logout.css
@@ -28,30 +28,32 @@ header p {
     margin-top: 100px;
 }
 
-.background_container{
-    position: relative;
-}
 
 .background_color {
     display: inline-block;
     margin-bottom: 20px;
-    background-color: gray;
-    opacity: 0.5;
+    background: rgba(128, 128, 128, 0.5);
     margin: 0 auto;
     padding: 35px;
     border-radius: 10px;
+    position: relative;
     z-index: 1;
 
 }
 
+
 .background_color p:first-child {
     font-size: 120%;
+    position: relative;
+    z-index: 2;
 
 }
 
 .background_color p:last-child {
     margin-top: 20px;
     text-decoration: underline;
+    position: relative;
+    z-index: 2;
 
 }
 
@@ -74,6 +76,8 @@ form a {
 .form {
     text-align: left;
     padding: 15px;
+    position: relative;
+    z-index: 2;
 
 }
 
